# singleton-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: lib.rs  preemptive.rs  singleton.rs
