[package]
name = "singleton"
version = "0.2.2"
authors = ["CrLF0710 <crlf0710@gmail.com>"]
description = "Singleton holder for convenient global state management."
license = "MIT"
repository = "https://github.com/crlf0710/singleton-rs"
documentation = "https://docs.rs/singleton"

[features]
const_fn = []
